Bug 58589 - UI: program file recovery dialog looks unfinished
Summary: UI: program file recovery dialog looks unfinished
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: Other All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0 target:4.0.0.2 target:3.6.5
Keywords:
Depends on:
Blocks: 59965
  Show dependency treegraph
 
Reported: 2012-12-20 21:28 UTC by clemty
Modified: 2013-01-28 10:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog with white rectangle (please disregard error message) (476.92 KB, image/png)
2012-12-20 21:28 UTC, clemty
Details
Recovery dialog LO3.6.4.3 (50.14 KB, image/png)
2012-12-20 22:33 UTC, Jorendc
Details
Recovery dialog LO4.0b1 (49.63 KB, image/png)
2012-12-20 22:35 UTC, Jorendc
Details
Crash Dialog (82.51 KB, image/png)
2013-01-25 20:48 UTC, clemty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description clemty 2012-12-20 21:28:32 UTC
Created attachment 71875 [details]
Dialog with white rectangle (please disregard error message)

Version 3.6.4.3 (Build ID: 2ef5aff)
Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
Win7 x64

if lodev crashes and then presents the dialog to recover the files, instead of a banner on top there is just a white rectangle (compare to 'about' screen with green banner)

screenshot attached (please disregard error message)
Comment 1 Jorendc 2012-12-20 22:31:21 UTC
Thanks for filling this report!

I don't think this is a bug.

LibreOffice 3.6.4.3 as well as 4.0.0.0b1 doesn't have a banner on top of the file recovery dialog. Can someone verify this isn't a feature/bug?

I'll upload screenshot of both versions
Comment 2 Jorendc 2012-12-20 22:33:41 UTC
Created attachment 71876 [details]
Recovery dialog LO3.6.4.3
Comment 3 Jorendc 2012-12-20 22:35:18 UTC
Created attachment 71877 [details]
Recovery dialog LO4.0b1
Comment 4 clemty 2012-12-20 23:05:18 UTC
apparently there was at least some writing there in LibreOffice 3.3:
http://studiawan.com/mengganti-user-profile-pada-libreoffice/

I doubt that the lack of content in that area is intentional.
Comment 5 leighman 2012-12-21 17:21:56 UTC
Confirmed.
The text looks like it should still be there. Haven't worked out why it isn't yet.
Comment 6 Jorendc 2012-12-21 17:29:55 UTC
Ok, so it's a bug. I reproduced it with LibreOffice 3.6.4.3 -> so changed version to that version.

(NB: the LibreOffice version of this bug should be the "first LibreOffice version which can reproduce the bug").

Thanks for reproducing
Comment 7 leighman 2012-12-21 22:43:43 UTC
http://opengrok.libreoffice.org/xref/core/svx/source/dialog/docrecovery.cxx#987
m_aTitleWin seems to cover m_aTitleFT but why is beyond my pay grade :P
Setting m_aTitleWin.Hide() reveals it.
@Caolán, any thoughts?
Comment 8 Caolán McNamara 2013-01-08 12:08:18 UTC
I rather suspect http://cgit.freedesktop.org/libreoffice/core/commit/?id=efc6b840a0423099d6c3e0d33c14d34637fbba4c

i.e. a change to draw the last child first and work backwards to earlier children, which would suggest that for overlapping windows that the one that is the foreground widget needs to be created first i.e. swapping the order of m_aTitleWin and m_aTitleFT in the .hxx and .cxx
Comment 9 Not Assigned 2013-01-09 11:43:02 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8a4ce67987e5cb47f07dc61eeb450e1d5b9c541

Resolves: fdo#58589 recovery dialog title area text is missing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 leighman 2013-01-09 17:24:13 UTC
Any idea why that change was made?
Seems kinda unintuitive and errorprone
Comment 11 Caolán McNamara 2013-01-09 20:31:40 UTC
@kohei: what was the original reason behind http://cgit.freedesktop.org/libreoffice/core/commit/?id=efc6b840a0423099d6c3e0d33c14d34637fbba4c ?
Comment 12 Kohei Yoshida 2013-01-09 20:46:15 UTC
(In reply to comment #11)
> @kohei: what was the original reason behind
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=efc6b840a0423099d6c3e0d33c14d34637fbba4c ?

It was to fix the handling of stacked check box controls in Calc's sheet area (and probably applies to other control types as well).  When they are stacked vertically, the logical top one gets to handle the click events (which is correct), but because the paint order was reversed, the bottom one would get painted top.  Because of that, to the user's eye the check box didn't appear to be responding to the user's clicking.

Unfortunately some of the other UI controls depended on the old painting behavior, so I too had to fix several dialogs after that change..
Comment 13 Not Assigned 2013-01-10 08:56:07 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe3bcdac912580607611475bfc3b0fa478a54ec1&h=libreoffice-4-0

Resolves: fdo#58589 recovery dialog title area text is missing


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Not Assigned 2013-01-10 10:02:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26b0cacbceb39974fee8c974edb73c3428d9b137&h=libreoffice-3-6

Resolves: fdo#58589 recovery dialog title area text is missing


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 clemty 2013-01-25 20:48:11 UTC
Version 4.0.0.2 (Build ID: 5991f37846fc3763493029c4958b57282c2597e)

The same issue also exists with the dialog when LibreOffice crashes (that is, the dialog which pops up before the one which was fixed here)

reopening instead of submitting separately since I assume it has the same cause and all relevant parties are already in the cc

screenshot attached
Comment 16 clemty 2013-01-25 20:48:48 UTC
Created attachment 73659 [details]
Crash Dialog
Comment 17 Caolán McNamara 2013-01-28 10:48:23 UTC
lets split the dialogs, one is fixed, the other (bug #59965) is apparently not