Resolves: fdo#58589 recovery dialog title area text is missing

regression since efc6b840a0423099d6c3e0d33c14d34637fbba4c
as that changes the order in which windows are drawn

Change-Id: I37388229533127ab915bec351f094fcd4786b2a3
(cherry picked from commit f8a4ce67987e5cb47f07dc61eeb450e1d5b9c541)